--- a/todo.org
+++ b/todo.org
@@ -14,14 +14,14 @@ TODAY -*- mode: org -*-
 ** DONE Structure the program
    - extract classes to separet files
 
-** TODO Timers
+** DONE Timers
    Now it is a high time I create the timers that will allow to go to the phase 2
 
 *** DONE Does # of neighbors change?
     Check periodically number of neighbors
     
    
-*** TODO Broadcast message
+*** DONE Broadcast message
     Broadcast message of the neighbor's timer value;
     Always propagate only the smallest value obtained
 
@@ -33,17 +33,28 @@ TODAY -*- mode: org -*-
 	 I don't care who is sending the message (on the real hardware it probably the lasers will be used;
 	 or sth else that could either send more extensive pieces of information)
     
-*** TODO Aggregation changes
+*** DONE The second timer
+    Add the second timer in order to synchronize the AS
+
+*** DONE Aggregation changes
     there must be some switch off (after the transition to phase 2 occurs)
+
+    -Solution - The number which can be incremented only -> will indicate the state
     
 *** TODO Further 
 * Minors:
   Optional todos
 
+** TODO **OPTIONAL**
+   If no neighbors of the same AS are being spotted -> go to state 1
+   (It should be applied if necessary in function update() of the Robot class)
+   -The aim of that is to change the state of the "lost" robots to found another cluster
+   
 ** TODO All collisions should be smooth
 
 ** TODO Make the change of speed easy to change
    after stop speed must be multiplied as initially given
+   
    
 *** Other notes:
   Changing phase of work
@@ -57,3 +68,4 @@ TODAY -*- mode: org -*-
 
   Notation used:
   AS - autonomus system -> represents the cluster of robots
+
